--- a/ui/edge_parametizer.ui
+++ b/ui/edge_parametizer.ui
@@ -6,41 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>392</width>
-    <height>292</height>
+    <width>286</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2">
+  <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <layout class="QGridLayout" name="gridLayout">
+    <layout class="QGridLayout" name="gridLayout_2">
      <property name="spacing">
       <number>8</number>
      </property>
-     <item row="1" column="1">
-      <widget class="QLabel" name="nodeType_label">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="text">
-        <string>node_type</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QCheckBox" name="rightSide_checkBox">
-       <property name="text">
-        <string>Right Side</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="1">
-      <widget class="QLabel" name="nodeName_label">
+      <widget class="QLabel" name="edgeName_label">
        <property name="enabled">
         <bool>true</bool>
        </property>
@@ -54,35 +34,35 @@
         <enum>Qt::NoFocus</enum>
        </property>
        <property name="text">
-        <string>node_name</string>
+        <string>edge_name</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
-     <item row="2" column="0">
-      <widget class="QCheckBox" name="availability_checkBox">
+     <item row="1" column="1">
+      <widget class="QLabel" name="edgeType_label">
        <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+        <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Available</string>
+        <string>edge_type</string>
        </property>
       </widget>
      </item>
-     <item row="3" column="0">
-      <widget class="QCheckBox" name="leftSide_checkBox">
-       <property name="text">
-        <string>Left Side</string>
+     <item row="2" column="1">
+      <widget class="QDoubleSpinBox" name="weight_spinBox">
+       <property name="decimals">
+        <number>3</number>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="t_label">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
@@ -90,7 +70,7 @@
         </sizepolicy>
        </property>
        <property name="text">
-        <string>Node name:</string>
+        <string>Edge name:</string>
        </property>
       </widget>
      </item>
@@ -104,6 +84,19 @@
        </property>
        <property name="text">
         <string>Type:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="t_label_3">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Weight:</string>
        </property>
       </widget>
      </item>
